Test run of not having ChildProcess auto-create a TaskScheduler

Bug: 759108
Change-Id: If5098c5aa4434ccd32943df28734f7d64bab4606